# rspack

./: .gitignore  .prettierignore  .typos.toml  AGENTS.md  Cargo.toml  README.md  README.zh-CN.md  deny.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rslint.config.mts  rslint.config.ts  skills-lock.json  x  x.mjs
crates/rspack_hash/: Cargo.toml
crates/rspack_hash/src/: lib.rs
crates/rspack_hash/tests/: hash.rs
crates/rspack_plugin_javascript/: Cargo.toml
crates/rspack_plugin_javascript/src/: lib.rs  magic_comment.rs  runtime.rs  runtime_context.rs
crates/rspack_plugin_javascript/src/dependency/: branch_guard.rs  export_info_dependency.rs  mod.rs
crates/rspack_plugin_javascript/src/dependency/commonjs/: common_js_export_require_dependency.rs  common_js_exports_dependency.rs  common_js_full_require_dependency.rs  common_js_require_dependency.rs  common_js_self_reference_dependency.rs  mod.rs  require_resolve_dependency.rs
crates/rspack_plugin_javascript/src/dependency/context/: common_js_require_context_dependency.rs  import_context_dependency.rs  import_meta_context_dependency.rs  mod.rs  require_resolve_context_dependency.rs
crates/rspack_plugin_javascript/src/dependency/esm/: esm_compatibility_dependency.rs  esm_export_expression_dependency.rs  esm_export_imported_specifier_dependency.rs  esm_export_specifier_dependency.rs  esm_import_dependency.rs  esm_import_specifier_dependency.rs  import_dependency.rs  import_eager_dependency.rs  import_meta_rsc_dependency.rs  import_weak_dependency.rs  mod.rs  provide_dependency.rs
crates/rspack_plugin_javascript/src/dependency/hmr/: import_meta_hot_accept.rs  import_meta_hot_decline.rs  module_hot_accept.rs  module_hot_decline.rs
crates/rspack_plugin_javascript/src/dependency/url/: mod.rs
crates/rspack_plugin_javascript/src/parser_and_generator/: mod.rs
crates/rspack_plugin_javascript/src/parser_plugin/: api_plugin.rs  common_js_exports_parse_plugin.rs  common_js_imports_parse_plugin.rs  common_js_plugin.rs  compatibility_plugin.rs  drive.rs  esm_detection_parser_plugin.rs  esm_export_dependency_parser_plugin.rs  esm_import_dependency_parser_plugin.rs  esm_top_level_this_plugin.rs  exports_info_api_plugin.rs  hot_module_replacement_plugin.rs  import_meta_context_dependency_parser_plugin.rs  import_meta_plugin.rs  import_parser_plugin.rs  import_phase.rs  initialize_evaluating.rs  inline_const.rs  is_included_plugin.rs  javascript_meta_info_plugin.rs  mod.rs  node_stuff_plugin.rs  override_strict_plugin.rs  require_context_dependency_parser_plugin.rs  require_ensure_dependencies_block_parse_plugin.rs  side_effects_parser_plugin.rs  trait.rs  url_plugin.rs  use_strict_plugin.rs  worker_plugin.rs
crates/rspack_plugin_javascript/src/parser_plugin/amd/: amd_define_dependency_parser_plugin.rs  amd_plugin.rs  amd_require_dependencies_block_parser_plugin.rs
crates/rspack_plugin_javascript/src/parser_plugin/const/: if_stmt.rs  logic_expr.rs  mod.rs
crates/rspack_plugin_javascript/src/parser_plugin/define_plugin/: parser.rs  walk_data.rs
crates/rspack_plugin_javascript/src/parser_plugin/inner_graph/: mod.rs  plugin.rs  state.rs
crates/rspack_plugin_javascript/src/parser_plugin/provide_plugin/: parser.rs
crates/rspack_plugin_javascript/src/plugin/: api_plugin.rs  drive.rs  flag_dependency_exports_plugin.rs  flag_dependency_usage_plugin.rs  impl_plugin_for_js_plugin.rs  mangle_exports_plugin.rs  mod.rs  module_concatenation_plugin.rs  runtime_context.rs  side_effects_flag_plugin.rs  url_plugin.rs
crates/rspack_plugin_javascript/src/utils/: mod.rs  object_properties.rs
crates/rspack_plugin_javascript/src/utils/eval/: eval_array_expr.rs  eval_binary_expr.rs  eval_call_expr.rs  eval_cond_expr.rs  eval_lit_expr.rs  eval_member_expr.rs  eval_new_expr.rs  eval_prop_name.rs  eval_source.rs  eval_tpl_expr.rs  eval_unary_expr.rs  mod.rs
crates/rspack_plugin_javascript/src/visitors/: mod.rs  scope_info.rs  semicolon.rs
crates/rspack_plugin_javascript/src/visitors/dependency/: mod.rs  util.rs
crates/rspack_plugin_javascript/src/visitors/dependency/parser/: ast.rs  mod.rs  (+7 more)
crates/rspack_sources/: Cargo.toml  README.md
crates/rspack_sources/src/: cacheable.rs  cached_source.rs  concat_source.rs  decoder.rs  encoder.rs  error.rs  helpers.rs  lib.rs  linear_map.rs  object_pool.rs  original_source.rs  raw_source.rs  replace_source.rs  source.rs  source_content_lines.rs  source_map_source.rs  with_utf16.rs
crates/rspack_sources/tests/: compat_source.rs
crates/rspack_tracing/: Cargo.toml
crates/rspack_tracing/src/: lib.rs  stdout.rs
xtask/benchmark/: Cargo.toml  README.md
xtask/benchmark/benches/: benches.rs  rspack_sources.rs  walltime.rs
xtask/benchmark/benches/groups/: build_chunk_graph.rs  bundle.rs  compilation_stages.rs  diagnostics.rs  mod.rs  module_graph_api.rs  persistent_cache.rs  rspack_sources.rs  rspack_sources_complex_replace_source.rs  rspack_sources_repetitive_react_components.rs  rspack_sources_source_map.rs  scan_dependencies.rs
xtask/benchmark/benches/groups/bundle/: misc.rs  threejs.rs  threejs_10x.rs  util.rs
xtask/benchmark/benches/walltime_groups/: bundle.rs  mod.rs
xtask/benchmark/cases/: build_chunk_graph.rs  build_module_graph.rs  bundle_basic_react_development.rs  bundle_basic_react_production_sourcemap.rs  bundle_misc_development.rs  bundle_misc_production_sourcemap.rs  bundle_threejs_development.rs  bundle_threejs_production_sourcemap.rs  mod.rs  module_graph_api.rs  persistent_cache_restore.rs  persistent_cache_restore_after_single_file_change.rs  rspack_sources.rs  scan_dependencies.rs
xtask/benchmark/src/: lib.rs
xtask/benchmark/stages/: concatenate_module_code_generation.rs  create_chunk_assets.rs  create_chunk_hashes.rs  create_chunk_ids.rs  create_concatenate_module.rs  create_full_hash.rs  create_module_assets.rs  create_module_hashes.rs  create_module_ids.rs  create_named_chunk_ids.rs  create_named_module_ids.rs  flag_dependency_exports.rs  flag_dependency_usage.rs  mangle_exports.rs  mod.rs  real_content_hash.rs  runtime_requirements.rs  split_chunks.rs
(+2355 files in other folders)
