[package]
description       = "rspack javascript plugin"
edition.workspace = true
license           = "MIT"
name              = "rspack_plugin_javascript"
repository        = "https://github.com/web-infra-dev/rspack"
version.workspace = true

[dependencies]
anymap                                = { workspace = true }
async-trait                           = { workspace = true }
bitflags                              = { workspace = true }
concat-string                         = { workspace = true }
cow-utils                             = { workspace = true }
either                                = { workspace = true }
fast-glob                             = { workspace = true }
form_urlencoded                       = { workspace = true }
indexmap                              = { workspace = true }
itertools                             = { workspace = true }
memchr                                = { workspace = true }
num-bigint                            = { workspace = true }
once_cell                             = { workspace = true }
rayon                                 = { workspace = true }
regex                                 = { workspace = true }
regress                               = { workspace = true, features = ["pattern"] }
rspack_cacheable                      = { workspace = true }
rspack_collections                    = { workspace = true }
rspack_core                           = { workspace = true }
rspack_error                          = { workspace = true }
rspack_hash                           = { workspace = true }
rspack_hook                           = { workspace = true }
rspack_ids                            = { workspace = true }
rspack_macros                         = { workspace = true }
rspack_parallel                       = { workspace = true }
rspack_paths                          = { workspace = true }
rspack_regex                          = { workspace = true }
rspack_util                           = { workspace = true }
rustc-hash                            = { workspace = true }
serde_json                            = { workspace = true }
slotmap                               = { workspace = true }
smallvec                              = { workspace = true }
sugar_path                            = { workspace = true }
swc_atoms                             = { workspace = true }
swc_experimental_allocator            = { workspace = true }
swc_experimental_ecma_ast             = { workspace = true }
swc_experimental_ecma_parser          = { workspace = true, features = ["unstable"] }
swc_experimental_ecma_semantic        = { workspace = true }
swc_experimental_ecma_transforms_base = { workspace = true }
swc_experimental_ecma_utils           = { workspace = true }
tokio                                 = { workspace = true, features = ["sync"] }
tracing                               = { workspace = true }
url                                   = { workspace = true }
winnow                                = { workspace = true }

[lints]
workspace = true

[lib]
doctest = false
