[package]
description       = "rspack benchmark tooling"
edition.workspace = true
license           = "MIT"
name              = "rspack_benchmark"
publish           = false
repository        = "https://github.com/web-infra-dev/rspack"
version.workspace = true

[dependencies]
criterion = { workspace = true }
tokio     = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
# Keep benchmark allocator features aligned with rspack_allocator.
mimalloc = { workspace = true, features = ["local_dynamic_tls", "v3"] }

[target.'cfg(target_os = "macos")'.dependencies]
mimalloc = { workspace = true, features = ["v3"] }

[target.'cfg(all(not(target_os = "linux"), not(target_os = "macos"), not(target_family = "wasm")))'.dependencies]
mimalloc = { workspace = true, features = ["v3"] }

[dev-dependencies]
# Make rust analyzer happy
async-trait                = { workspace = true }
rspack                     = { workspace = true, features = ["codspeed", "full"] }
rspack_cacheable           = { workspace = true }
rspack_collections         = { workspace = true }
rspack_core                = { workspace = true, features = ["codspeed"] }
rspack_error               = { workspace = true }
rspack_fs                  = { workspace = true }
rspack_hash                = { workspace = true }
rspack_javascript_compiler = { workspace = true }
rspack_plugin_javascript   = { workspace = true }
rspack_plugin_split_chunks = { workspace = true }
rspack_regex               = { workspace = true }
rspack_sources             = { workspace = true }
rspack_tasks               = { workspace = true }
rustc-hash                 = { workspace = true }
serde_json                 = { workspace = true }
swc_core                   = { workspace = true, features = ["__parser", "base"] }

[[bench]]
harness = false
name    = "benches"

[[bench]]
harness = false
name    = "rspack_sources"

[[bench]]
harness = false
name    = "walltime"

[package.metadata.cargo-shear]
ignored = ["rspack_cacheable"]

[lints]
workspace = true

[lib]
doctest = false
test    = false
